--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,3 +1,7 @@
-@import './header.less';
-@import './footer.less';
+// @import './header.less';
+// @import './footer.less';
 @import './index.less';
+@import './doc.less';
+@import './blog.less';
+@import './about.less';
+@import './bloglist.less';
